--- a/site.css
+++ b/site.css
@@ -123,3 +123,12 @@
       clear: both;
       padding: 0px;
     }
+
+    a:visited {
+        color: black; 
+    }
+
+    a
+    {
+       color: black; 
+    }
