Add paragraph styles to site.css
Add styles for paragraph elements including margins and overflow.

--- a/site.css
+++ b/site.css
@@ -132,3 +132,11 @@
     {
        color: black; 
     }
+
+    p
+    {
+    margin-left: 30px;
+    margin-right: 30px;
+    max-height: 450px;
+    overflow-y: auto;
+    }
