--- a/assignments/02-basic-css/site.css
+++ b/assignments/02-basic-css/site.css
@@ -1,7 +1,7 @@
     body {
         margin: 0;
-        font-family: Arial, sans-serif;
-        background-color:
+        font-family: Calibri, sans-serif;
+        background-color: #ffffe6;
     }
 
     /* Top menu bar */
@@ -32,7 +32,7 @@
     .dropdown-content {
         display: none;
         position: absolute;
-        background-color: #333;
+        background-color: #d9d9d9;
         min-width: 160px;
         z-index: 1;
     }
@@ -45,7 +45,7 @@
     }
 
     .dropdown-content a:hover {
-        background-color: #444;
+        background-color: #FF7F7F;
     }
 
     .dropdown:hover .dropdown-content {
@@ -77,7 +77,7 @@
     margin-bottom: 30px;
     background-color: lightgrey;
     max-height: 850px;
-    overflow-y: auto;
+    overflow-y: auto;    
     }
 
     .footer
@@ -89,6 +89,7 @@
     position: absolute;
     bottom: 1px;
     width: 100%;
+    vertical-align: middle;
     }
 
     img
@@ -121,4 +122,47 @@
       display: table;
       clear: both;
       padding: 0px;
+    }
+
+    a:visited {
+        color: black; 
+    }
+
+    a
+    {
+       color: #b3b3b3;
+       text-decoration: none;
+    }
+
+    p
+    {
+    margin-left: 30px;
+    margin-right: 30px;
+    max-height: 450px;
+    overflow-y: auto;
+    }
+
+    li
+    {
+    margin-left: -5px;
+    text-decoration: none;    
+    }
+
+    a:link {
+    text-decoration: none;
+    }
+
+    a:visited {
+    text-decoration: none;
+    color: #b3b3b3;
+    }
+
+    a:hover {
+    text-decoration: none;
+    color: #f2f2f2;
+    }
+
+    a:active {
+    text-decoration: none;
+    color: #b3b3b3;
     }
