--- a/assignments/02-basic-css/oldsite.css
+++ b/assignments/02-basic-css/oldsite.css
@@ -2,7 +2,11 @@
         margin: 0;
         font-family: Calibri, sans-serif;
         background-color: #ffffe6;
-        width: 100%;
+        background-image: url("./images/carolinanight.jpg");
+        background-size: cover;       /* Scale image to cover entire area */
+        background-position: center;  /* Keep image centered */
+        background-repeat: no-repeat; /* Prevent tiling */
+        background-attachment: fixed; /* Keep image fixed during scroll (optional) */
     }
 
     /* Top menu bar */
@@ -33,7 +37,7 @@
     .dropdown-content {
         display: none;
         position: absolute;
-        background-color: #66ccff;
+        background-color: #d9d9d9;
         min-width: 160px;
         z-index: 1;
     }
@@ -90,16 +94,14 @@
     position: absolute;
     width: 100%;
     vertical-align: middle;
-    bottom: 0px;
+    position: sticky; 
+    bottom: 0;    
     }
 
     img
     {
-    padding: 15px;
+    padding: 20px;
     border: 2px solid lightgrey;
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-bottom: 5px;
     }
 
     * {
@@ -111,15 +113,14 @@
       float: left;
       width: 50%;
       padding: 10px;
-      text-align: left;
       }
     /* Create two equal columns that floats next to each other */
     .column1 {
       float: left;
       width: 33%
       padding: 20px;
-      bottom-margin: 5px;
-      text-align: left;
+      bottom-margin: 0px;
+      border: 2px solid black;
     }
 
     /* Clear floats after the columns */
