--- a/assignments/03-layout-design/layout.css
+++ b/assignments/03-layout-design/layout.css
@@ -63,6 +63,8 @@ nav a:hover {
     background: white;
     padding: 20px;
     border-radius: 5px;
+    border: 2px solid black;
+    width: 50%;
 }
 
 .tasks {
