--- a/assignments/03-layout-design/layout.css
+++ b/assignments/03-layout-design/layout.css
@@ -65,6 +65,7 @@ nav a:hover {
     border-radius: 5px;
     border: 2px solid black;
     width: 50%;
+    max-height: 300px;
 }
 
 .tasks {
@@ -72,6 +73,9 @@ nav a:hover {
     display: flex;
     flex-direction: column;
     gap: 15px;
+    max-width: 145px;
+    max-height: 300px;
+    border: 2px solid black;
 }
 
 .task-item {
