--- a/assignments/03-layout-design/layout.css
+++ b/assignments/03-layout-design/layout.css
@@ -148,10 +148,9 @@ nav.main-nav a:hover {
     flex-direction: column;
     gap: 20px;
     padding: 20px;
-    max-width: 1400px;
+    max-width: 90%;
     margin: 0 auto;
-    text-align: left;
-}
+    }
 
 .idea {
     display: flex;
