--- a/assignments/03-layout-design/layout2.css
+++ b/assignments/03-layout-design/layout2.css
@@ -284,3 +284,36 @@ footer {
         flex-direction: column;
     }
 }
+/* ----------------------------- */
+/* MAIN NAVIGATION BAR          */
+/* ----------------------------- */
+
+nav.main-nav {
+    background: #2d4b73;
+}
+
+nav.main-nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+nav.main-nav li {
+    margin: 0;
+}
+
+nav.main-nav a {
+    display: block;
+    padding: 15px 25px;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+nav.main-nav a:hover {
+    background: #1e3550;
+}
+
