--- a/assignments/03-layout-design/layout.css
+++ b/assignments/03-layout-design/layout.css
@@ -60,8 +60,7 @@ nav.main-nav a:hover {
     display: flex;
     gap: 20px;
     padding: 20px;
-    max-width: 98%;
-    margin: 0 auto;
+
 }
 
 /* Important text = 30% */
@@ -145,11 +144,22 @@ nav.main-nav a:hover {
 /* IDEA SECTIONS (FULL-WIDTH)   */
 /* ----------------------------- */
 
+.ideacontainer
+{
+    display: flex;
+    flex-direction: column;      
+    max-width: 95%;
+    margin: 0 auto;
+}
+
+
 .ideas {
     display: flex;
     flex-direction: column;
     gap: 20px;
     padding: 20px;
+    max-width: 1400px;
+    margin: 0 auto;
     }
 
 .idea {
