--- a/assignments/03-layout-design/layout.css
+++ b/assignments/03-layout-design/layout.css
@@ -145,10 +145,7 @@ nav.main-nav a:hover {
 
 .ideacontainer
 {
-    display: flex;
-    flex-direction: column;      
-    max-width: 95%;
-    margin: 0 auto;
+    max-width: 100%
 }
 
 
