--- a/assignments/03-layout-design/layout.css
+++ b/assignments/03-layout-design/layout.css
@@ -8,6 +8,10 @@ body {
     background: #f4f4f4;
 }
 
+p
+{
+    
+}
 /* ----------------------------- */
 /* HEADER                       */
 /* ----------------------------- */
