--- a/layout.css
+++ b/layout.css
@@ -117,6 +117,8 @@ nav.main-nav a:hover {
     display: flex;
     gap: 20px;
     padding: 20px;
+    max-width: 1600px;
+    margin: 0 auto;
 }
 
 .mid-col {
