--- a/assignments/03-layout-design/layout.css
+++ b/assignments/03-layout-design/layout.css
@@ -64,6 +64,8 @@ nav.main-nav a:hover {
     display: flex;
     gap: 20px;
     padding: 20px;
+    max-width: 1600px;
+    margin: 0 auto;
 }
 
 /* Important text = 30% */
@@ -115,6 +117,8 @@ nav.main-nav a:hover {
     display: flex;
     gap: 20px;
     padding: 20px;
+    max-width: 1600px;
+    margin: 0 auto;
 }
 
 .mid-col {
