--- a/layouthome.css
+++ b/layouthome.css
@@ -67,6 +67,7 @@ nav.main-nav a:hover {
 .tasks {
     display: flex;
     flex-wrap: wrap;
+    background: white;
     gap: 20px;
     justify-content: center;
 }
