--- a/layouthome.css
+++ b/layouthome.css
@@ -75,8 +75,10 @@ nav.main-nav a:hover {
 
 /* Task box: fixed 300×300 */
 .task-item {
+    margin-top: 5px;
+    margin-bottom: 5px;
     width: 300px;
-    height: 350px;
+    height: 360px;
     background: #e8e8e8;
     padding: 10px;
     border-radius: 5px;
@@ -213,7 +215,7 @@ footer {
     /* Tasks become full width but stay 300px tall */
     .task-item {
         width: 100%;
-        height: 350px;
+        height: 360px;
     }
 
     .middle-columns {
