--- a/layouthome.css
+++ b/layouthome.css
@@ -71,6 +71,8 @@ nav.main-nav a:hover {
     background: white;
     gap: 20px;
     justify-content: center;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 /* Task box: fixed 300×300 */
