--- a/layouthome.css
+++ b/layouthome.css
@@ -63,6 +63,8 @@ nav.main-nav a:hover {
     max-width: 1600px;
     margin: 0 auto;
     background: white;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .tasks {
