--- a/assignments/03-layout-design/layout.css
+++ b/assignments/03-layout-design/layout.css
@@ -80,6 +80,8 @@ nav.main-nav a:hover {
 
 /* Tasks = 70% */
 .tasks {
+    flex: 1 1 calc(25% - 10px); 
+    max-width: 1000px;
     flex: 0 0 70%;
     display: flex;
     flex-direction: row;
@@ -227,7 +229,7 @@ footer {
     }
 
     .tasks {
-        width: 100%;
+        width: 80%;
         flex-wrap: wrap;
         justify-content: center;
     }
@@ -248,6 +250,7 @@ footer {
     .idea {
         flex-direction: column;
         text-align: center;
+        max-width: 750px;
     }
 
     .idea-text {
