--- a/assignments/03-layout-design/layout.css
+++ b/assignments/03-layout-design/layout.css
@@ -80,9 +80,8 @@ nav.main-nav a:hover {
 
 /* Tasks = 70% */
 .tasks {
-    flex: 1 1 calc(25% - 10px); 
     max-width: 1000px;
-    flex: 0 0 70%;
+    flex: 0 0 65%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -232,6 +231,7 @@ footer {
         width: 80%;
         flex-wrap: wrap;
         justify-content: center;
+        max-width: 700px;
     }
 
     .task-item {
