--- a/layout.css
+++ b/layout.css
@@ -253,7 +253,8 @@ footer {
     .idea {
         flex-direction: column;
         text-align: center;
-        max-width: 750px;
+        max-width: 950px;
+        margin: 0 auto;
     }
 
     .idea-text {
