--- a/layouthome.css
+++ b/layouthome.css
@@ -206,10 +206,10 @@ footer {
 }
 
 /* ----------------------------- */
-/* MOBILE LAYOUT (≤ 800px)      */
+/* MOBILE LAYOUT (≤ 1000px)      */
 /* ----------------------------- */
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
 
     nav.main-nav ul {
         flex-direction: column;
@@ -229,6 +229,8 @@ footer {
     .idea {
         flex-direction: column;
         text-align: center;
+        max-width: 950px;
+        margin: 0 auto;
     }
 
     .idea-text {
@@ -236,7 +238,7 @@ footer {
     }
 
     .idea img {
-        max-width: 60%;
+        max-width: 40%;
         order: 2;
     }
 }
