--- a/layouthome.css
+++ b/layouthome.css
@@ -179,6 +179,7 @@ nav.main-nav a:hover {
     flex: 1;
     max-width: 70%;
     float: left;
+    align: left;
 }
 
 .idea img {
@@ -241,6 +242,8 @@ footer {
 
     .idea-text {
         max-width: 100%;
+        align: left;
+        float: left;
     }
 
     .idea img {
