--- a/layouthome.css
+++ b/layouthome.css
@@ -271,6 +271,12 @@ footer {
     min-height: 300px;
     min-width: 300px;
     }
+    ul, ol
+    {
+      margin-left: 0;
+      padding-left: 0;
+      text-align: left;
+    }
 }
 
 /* ----------------------------- */
