--- a/layout.css
+++ b/layout.css
@@ -203,7 +203,7 @@ nav.main-nav a:hover {
 /* ----------------------------- */
 
 footer {
-    background: #4a6fa5;
+    background: black;
     color: white;
     text-align: center;
     padding: 15px;
