--- a/layouthome.css
+++ b/layouthome.css
@@ -15,7 +15,7 @@ p {}
 /* ----------------------------- */
 
 header {
-    background: #4a6fa5;
+    background: black;
     color: white;
     padding: 20px;
     text-align: center;
