--- a/layouthome.css
+++ b/layouthome.css
@@ -299,9 +299,10 @@ footer {
     margin-top: 5px;
     margin-bottom: 5px;
     padding: 20px;
-    max-width: 1600px;
+    max-width: 1580px;
     margin-left: auto;
     margin-right: auto;
+    text-align: left;
 }
 
 .projecttasks {
