--- a/layouthome.css
+++ b/layouthome.css
@@ -65,6 +65,7 @@ nav.main-nav a:hover {
     background: white;
     margin-top: 5px;
     margin-bottom: 5px;
+    border-radius: 5px;
 }
 
 .tasks {
@@ -313,6 +314,8 @@ footer {
     justify-content: center;
     margin-top: 5px;
     margin-bottom: 5px;
+    padding: 20px;
+    border-radius: 5px;
 }
 
 
