--- a/layout.css
+++ b/layout.css
@@ -272,7 +272,7 @@ footer {
 
     li
     {
-    magin-top: 20px;
+    margin-top: 20px;
     margin-left: -1px;
     text-decoration: none;    
     }
