--- a/layout.css
+++ b/layout.css
@@ -66,6 +66,7 @@ nav.main-nav a:hover {
     padding: 20px;
     max-width: 1600px;
     margin: 0 auto;
+    background: white;
 }
 
 /* Important text = 30% */
