--- a/layout.css
+++ b/layout.css
@@ -64,9 +64,10 @@ nav.main-nav a:hover {
     display: flex;
     gap: 20px;
     padding: 20px;
-    max-width: 1600px;
+    max-width: 1570px;
     margin: 0 auto;
     background: white;
+    border-radius: 5px;
 }
 
 /* Important text = 30% */
@@ -122,6 +123,7 @@ nav.main-nav a:hover {
     padding: 20px;
     max-width: 1600px;
     margin: 0 auto;
+    border-radius: 5px;
 }
 
 .mid-col {
@@ -159,8 +161,9 @@ nav.main-nav a:hover {
     flex-direction: column;
     gap: 20px;
     padding: 20px;
-    max-width: 1600px;
+    max-width: 1570px;
     margin: 0 auto;
+    border-radius: 5px;
     }
 
 .idea {
