--- a/layouthome.css
+++ b/layouthome.css
@@ -406,11 +406,13 @@ footer {
                 }
     #miami1
     {
-    max-width: 90%;
+    max-width: 95%;
+    margin: 0 auto;
     }
     #miami3
     {
-    max-width: 90%;
+    max-width: 95%;
+    margin: 0 auto;
     }
 }
 
