--- a/layouthome.css
+++ b/layouthome.css
@@ -159,10 +159,12 @@ nav.main-nav a:hover {
 .ideas {
     display: flex;
     flex-direction: column;
-    gap: 20px;
     padding: 20px;
-    max-width: 1570px;
+    max-width: 1580px;
     margin: 0 auto;
+    background: white;
+    margin-top: 5px;
+    margin-bottom: 5px;
     border-radius: 5px;
     }
 
