--- a/layouthome.css
+++ b/layouthome.css
@@ -214,6 +214,33 @@ footer {
     padding: 15px;
 }
 
+/*Custom CSS For this Site*/
+#firstimage
+{
+width: 200px;
+height: 200px;
+max-width: 200px;
+max-height: 200px;
+}
+#secondimage
+{
+width: 200px;
+height: 200px;
+max-width: 200px;
+max-height: 200px;
+}
+#thirdimage
+{
+width: 200px;
+height: 200px;
+max-width: 200px;
+max-height: 200px;
+    
+}
+
+
+
+
 /* ----------------------------- */
 /* PROJECTS SECTION (same as tasks) */
 /* ----------------------------- */
@@ -411,6 +438,31 @@ footer {
     max-width: 95%;
     margin: 0 auto;
     }
+#firstimage
+{
+width: 200px;
+height: 200px;
+max-width: 200px;
+max-height: 200px;
+}
+#secondimage
+{
+width: 200px;
+height: 200px;
+max-width: 200px;
+max-height: 200px;
+}
+#thirdimage
+{
+width: 200px;
+height: 200px;
+max-width: 200px;
+max-height: 200px;
+   
+}
+
+
+    
 }
 
 /* ----------------------------- */
