--- a/layouthome.css
+++ b/layouthome.css
@@ -160,7 +160,7 @@ nav.main-nav a:hover {
     display: flex;
     flex-direction: column;
     padding: 20px;
-    max-width: 1580px;
+    max-width: 1570px;
     margin: 0 auto;
     background: white;
     margin-top: 5px;
@@ -177,6 +177,7 @@ nav.main-nav a:hover {
     border-radius: 5px;
     width: 100%;
     gap: 20px;
+    margin-left: 30px;
 }
 
 /* Text area: max 70% width */
