--- a/layouthome.css
+++ b/layouthome.css
@@ -172,7 +172,8 @@ nav.main-nav a:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #ffffff;
+    background: lightgrey;
+    background-color: lightgrey;
     padding: 20px;
     border-radius: 5px;
     width: 100%;
