--- a/layouthome.css
+++ b/layouthome.css
@@ -172,12 +172,13 @@ nav.main-nav a:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: lightgrey;
+    background-color: lightgrey;
     padding: 20px;
     border-radius: 5px;
     width: 100%;
     gap: 20px;
     margin-left: 30px;
+    top-margin: 10px;
 }
 
 /* Text area: max 70% width */
