--- a/layouthome.css
+++ b/layouthome.css
@@ -172,13 +172,14 @@ nav.main-nav a:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: lightgrey;
+    background-color: #e8e8e8;
     padding: 20px;
     border-radius: 5px;
     width: 100%;
     gap: 20px;
     margin-left: 30px;
-    top-margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 /* Text area: max 70% width */
