--- a/layouthome.css
+++ b/layouthome.css
@@ -348,6 +348,11 @@ max-height: 200px;
         text-align: left;
         max-width: 980px;
         margin: 0 auto;
+        background-color: #e8e8e8;
+        border-radius: 5px;
+        margin-left: 30px;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 
     .idea-text {
