--- a/layouthome.css
+++ b/layouthome.css
@@ -315,6 +315,17 @@ max-height: 200px;
     max-height: 200px;
     min-height: 200px;
     min-width: 200px;
+    
+    }
+    #miami1
+    {
+    max-width: 95%;
+    margin: 0 auto;
+    }
+    #miami3
+    {
+    max-width: 95%;
+    margin: 0 auto;
     }
 
 /* ----------------------------- */
