--- a/layout.css
+++ b/layout.css
@@ -304,7 +304,18 @@ max-width: 200px;
 max-height: 200px;
     
 }
-
+    #miami1
+    {
+    max-width: 48%;
+    min-width: 43%;
+    margin: 0 auto;
+    }
+    #miami3
+    {
+    max-width: 48%;
+    min-width: 43%;
+    margin: 0 auto;
+    }
 
 
 /* ----------------------------- */
