--- a/layout.css
+++ b/layout.css
@@ -170,11 +170,12 @@ nav.main-nav a:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #ffffff;
+    background-color: #ffffff;
     padding: 20px;
     border-radius: 5px;
     width: 85%;
-    top-margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     gap: 20px;
 }
 
@@ -306,14 +307,12 @@ max-height: 200px;
 }
     #miami1
     {
-    max-width: 48%;
-    min-width: 43%;
+    max-width: 97%;
     margin: 0 auto;
     }
     #miami3
     {
-    max-width: 48%;
-    min-width: 43%;
+    max-width: 97%;
     margin: 0 auto;
     }
 
@@ -444,6 +443,7 @@ max-height: 200px;
         flex-direction: column;
         max-width: 1590px;
         margin: 0 auto;
+        margin-top: 10px;
     }
     .idea {
         flex-direction: column;
