--- a/layouthome.css
+++ b/layouthome.css
@@ -84,7 +84,7 @@ nav.main-nav a:hover {
     margin-bottom: 5px;
     width: 300px;
     height: 360px;
-    background: #e8e8e8;
+    background-color: #e8e8e8;
     padding: 10px;
     border-radius: 5px;
     text-align: center;
@@ -172,14 +172,14 @@ nav.main-nav a:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #e8e8e8;
+    background-color: #e6e6ff;
     padding: 20px;
     border-radius: 5px;
     width: 100%;
     gap: 20px;
     margin-left: 30px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 /* Text area: max 70% width */
@@ -357,14 +357,13 @@ max-height: 200px;
     .idea {
         flex-direction: column;
         text-align: left;
-        max-width: 980px;
+        max-width: 850px;
         margin: 0 auto;
-        background-color: #e8e8e8;
+        background-color: #e6e6ff;
         border-radius: 5px;
         margin-left: 30px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        border: 2px black solid;
+        margin-top: 5px;
+        margin-bottom: 5px;
         }
 
     .idea-text {
@@ -453,10 +452,9 @@ max-height: 200px;
         flex-direction: column;
         max-width: 1580px;
         margin: 0 auto;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        background-color:  #e8e8e8;
-        border: 2px black solid;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        background-color:  #e6e6ff;
         border-radius: 5px;
     }
    
