--- a/layouthome.css
+++ b/layouthome.css
@@ -357,7 +357,7 @@ max-height: 200px;
     .idea {
         flex-direction: column;
         text-align: left;
-        max-width: 850px;
+        max-width: 800px;
         margin: 0 auto;
         background-color: #e6e6ff;
         border-radius: 5px;
@@ -398,7 +398,7 @@ max-height: 200px;
     }
     ul, ol
     {
-      margin-left: 0;
+      margin-left: 30px;
       padding-left: 0;
       text-align: left;
     }
