--- a/layouthome.css
+++ b/layouthome.css
@@ -382,7 +382,7 @@ max-height: 200px;
     li
     {
     margin-top: 20px;
-    margin-left: -1px;
+    margin-left: 5px;
     text-decoration: none;    
     }
 
@@ -421,6 +421,15 @@ max-height: 200px;
     #miami3
     {
     max-width: 48%;
+    }
+    mobile-pics
+    {
+    width: "99%";
+    max-width: "99%";
+    min-width: "99%";
+    text-align: center;
+    justify-content: center;
+    align-items: center;
     }
 }
 
