--- a/layouthome.css
+++ b/layouthome.css
@@ -432,6 +432,8 @@ max-height: 200px;
     text-align: center;
     justify-content: center;
     align-items: center;
+    margin: 0 auto; 
+    width: fit-content; 
     }
 }
 
