--- a/layouthome.css
+++ b/layouthome.css
@@ -199,7 +199,7 @@ nav.main-nav a:hover {
 
 /* IDEA 1 & 3 → image left */
 .idea.left {
-    flex-direction: row-reverse;
+    flex-direction: row;
 }
 
 /* IDEA 2 → image right */
@@ -336,6 +336,16 @@ max-height: 200px;
 
 @media (max-width: 1000px) {
 
+.idea.left {
+    flex-direction: row;
+}
+
+/* IDEA 2 → image right */
+.idea.right {
+    flex-direction: row;
+}
+
+    
     nav.main-nav ul {
         flex-direction: column;
         text-align: center;
