--- a/layouthome.css
+++ b/layouthome.css
@@ -199,7 +199,7 @@ nav.main-nav a:hover {
 
 /* IDEA 1 & 3 → image left */
 .idea.left {
-    flex-direction: row;
+    flex-direction: row-reverse;
 }
 
 /* IDEA 2 → image right */
