--- a/layouthome.css
+++ b/layouthome.css
@@ -369,23 +369,24 @@ max-height: 200px;
     .idea {
         flex-direction: column;
         text-align: left;
-        max-width: 800px;
+        min-width: 90%;
+        max-width: 95%;
         margin: 0 auto;
         background-color: #e6e6ff;
         border-radius: 5px;
-        margin-left: 30px;
         margin-top: 5px;
         margin-bottom: 5px;
         }
 
     .idea-text {
+        margin-left: 30px;
         max-width: 100%;
     }
 
     .idea img {
-        max-width: 40%;
-        height: 300px;
-        width: 300px;
+        max-width: 47%;
+        height: 250px;
+        width: 250px;
         order: 2;
     }
 
@@ -426,12 +427,12 @@ max-height: 200px;
 
     #miami1
     {
-    max-width: 46%;
+    max-width: 48%;
     min-width: 45%;        
     }
     #miami3
     {
-    max-width: 46%;
+    max-width: 48%;
     min-width: 45%;        
     }
     mobile-pics
