--- a/layouthome.css
+++ b/layouthome.css
@@ -206,6 +206,12 @@ nav.main-nav a:hover {
 .idea.right {
     flex-direction: row;
 }
+
+.idea.right img {
+    flex-direction: row;
+    margin-right: 100px;
+}
+
 /* ----------------------------- */
 /* FOOTER                       */
 /* ----------------------------- */
@@ -336,16 +342,16 @@ max-height: 200px;
 
 @media (max-width: 1000px) {
 
+/* IDEA 1 & 3 → image left */
 .idea.left {
-    flex-direction: row;
+    flex-direction: row-reverse;
 }
 
 /* IDEA 2 → image right */
 .idea.right {
     flex-direction: row;
 }
-
-    
+   
     nav.main-nav ul {
         flex-direction: column;
         text-align: center;
