--- a/layout.css
+++ b/layout.css
@@ -171,7 +171,7 @@ nav.main-nav a:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: lightgrey;
+    background-color: #e6e6ff;;
     padding: 20px;
     border-radius: 5px;
     width: 95%;
