--- a/layout.css
+++ b/layout.css
@@ -171,7 +171,7 @@ nav.main-nav a:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #e6e6ff;;
+    background-color: #e6e6ff;
     padding: 20px;
     border-radius: 5px;
     width: 95%;
@@ -368,9 +368,12 @@ max-height: 200px;
 
     .idea {
         flex-direction: column;
+        background-color: #e6e6ff;
         text-align: left;
         max-width: 980px;
         margin: 0 auto;
+        margin-top: 5px;
+        margin-bottom: 5px;
     }
 
     .idea-text {
