--- a/layout.css
+++ b/layout.css
@@ -424,9 +424,18 @@ width: 200px;
 height: 200px;
 max-width: 200px;
 max-height: 200px;
-    
+   
 }
-    
+ #image1
+{
+width: 200px;
+height: 200px;    
+}
+#image2
+{
+width: 200px;
+height: 200px;    
+}    
 }
 
 /* ----------------------------- */
