--- a/project/homepage/greenville.css
+++ b/project/homepage/greenville.css
@@ -8,8 +8,8 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     color: #1a1a1a; /* near-black text */
-    background-color: black; 
-    /*background-color: #f4f7f5;  soft gray-green background */
+    /*background-color: black; */
+    background-color: #f4f7f5;  soft gray-green background */
 
 }
 
