--- a/project/homepage/greenville.css
+++ b/project/homepage/greenville.css
@@ -84,7 +84,7 @@ footer {
 }
 #sales{ position: relative; margin: 0 auto; width: 85%; background-color: darkgreen;}
 .gacontainer{position: relative; margin: 0 auto; width: 85%;  border-radius: 5px; line-height: 1.6; text-align: center; background-color: black;}
-.containertop{position: relative; margin: 0 auto; width: 85%;  border-radius: 5px;}
+.container2{position: relative; margin: 0 auto; width: 85%;  border-radius: 5px; width: 100%; position: relative; background-color: black;}
 nav { background: #000000; border-bottom: 1px solid #1f3b2d; padding: 0; } 
 nav .menu { list-style: none; margin: 0; padding: 0; display: flex; justify-content: center; align-items: center; } 
 nav .menu > li { position: relative; } 
