--- a/project/homepage/css/login.css
+++ b/project/homepage/css/login.css
@@ -7,6 +7,7 @@ body {
   font-family: 'Roboto', sans-serif;
     display: flex;
     flex-direction: column;
+    background-color: #f4f7f5;
   }
 
 #userGreeting
