--- a/assignments/8-conditionals/css/a8styles.css
+++ b/assignments/8-conditionals/css/a8styles.css
@@ -1,1 +1,5 @@
-Assignment 8 styles
+/*Assignment 8 styles*/
+
+H2{ color: green;}
+H4{ color: black;}
+.footer { text-align: center; vertical-align: middle; color: white; background-color: white;}
