--- a/assignments/8-conditionals/css/a8styles.css
+++ b/assignments/8-conditionals/css/a8styles.css
@@ -3,3 +3,18 @@
 H2{ color: green;}
 H4{ color: black;}
 .footer { text-align: center; vertical-align: middle; color: white; background-color: white;}
+/* Start with desktop defaults */ 
+#selector { display: block; } 
+#mobilemenu { display: none; }
+
+/* Mobile mode: under 1000px */
+@media (max-width: 1000px) {
+  #selector {
+    display: none;
+  }
+
+  #mobilemenu {
+    display: block;
+  }
+}
+
