--- a/assignments/8-conditionals/css/a8styles.css
+++ b/assignments/8-conditionals/css/a8styles.css
@@ -20,6 +20,7 @@ H4{ color: black;}
     padding: 10px;
     font-size: 20px;
     user-select: none;
+    text-align: left;
   }
 
   #mobilemenu .arrow {
@@ -31,12 +32,14 @@ H4{ color: black;}
     display: none;
     padding-left: 0;
     margin-top: 10px;
+    background-color: teal;
   }
 
   #hiding li {
     list-style: none;
     padding: 8px 0;
     border-bottom: 1px solid #ccc;
+    color: white;
   }
 
   /* Rotate arrow when open */
