--- a/assignments/8-conditionals/css/a8styles.css
+++ b/assignments/8-conditionals/css/a8styles.css
@@ -1,5 +1,8 @@
 /*Assignment 8 styles*/
-
+#secone { text-align: center; margin-bottom: 100px;}
+#hiding { display: none; }
+.pagecontainer { position: relative; margin 0 auto; max-width=1600px; background-color: lightgrey;}
+body { background-color: purple;}
 H2{ color: green;}
 H4{ color: black;}
 .footer { text-align: center; vertical-align: middle; color: white; background-color: black; margin: 0 auto; min-height: 50px; max-height: 50px;}
