--- a/assignments/8-conditionals/css/a8styles.css
+++ b/assignments/8-conditionals/css/a8styles.css
@@ -6,6 +6,7 @@ body { background-color: purple;}
 H2{ color: green;}
 H4{ color: black;}
 .footer { text-align: center; vertical-align: middle; color: white; background-color: black; margin: 0 auto; min-height: 50px; max-height: 50px;}
+#topnavbar{ min-height: 50px; max-height: 50px; background-color: black; color: white;}
 /* Start with desktop defaults */ 
 #selector { display: block; } 
 #mobilemenu { display: none; color: white; background-color: black; min-height: 50px; max-height: 50px;}
